# dfp-external-storage

./: .editorconfig  .eslintrc  .gitignore  .pre-commit-config.yaml  eslint.config.cjs  pyproject.toml
dfp_external_storage/: commands.py  hooks.py
dfp_external_storage/config/: desktop.py  docs.py
dfp_external_storage/dfp_external_storage/doctype/dfp_external_storage/: dfp_external_storage.js  dfp_external_storage.py  dfp_external_storage_list.js  test_dfp_external_storage.py
dfp_external_storage/dfp_external_storage/doctype/dfp_external_storage_by_folder/: dfp_external_storage_by_folder.py
dfp_external_storage/dfp_external_storage/doctype/dfp_external_storage_ignored_doctype/: dfp_external_storage_ignored_doctype.py
dfp_external_storage/dfp_external_storage/page/dfp_s3_bucket_list/: dfp_s3_bucket_list.js  dfp_s3_bucket_list.py
dfp_external_storage/public/js/: app.js
dfp_external_storage/public/scss/: app.scss
